--- a/kadai_008/Untitled2.ipynb
+++ b/kadai_008/Untitled2.ipynb
@@ -16,20 +16,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 74,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bb7_Ob4F985M",
-        "outputId": "66f415ea-937f-46c3-aba9-83f0096c1e2d"
+        "outputId": "78f70d2d-e6e1-4001-b675-ae30fceafe72"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "31\n"
+            "FizzBuzz\n"
           ]
         }
       ],
@@ -37,11 +37,14 @@
         "import random\n",
         "var = random.randint(0,100)\n",
         "\n",
-        "if var % 3 == 0:\n",
-        "    print(\"Fizz\")\n",
+        "if var % 3 == 0 and var % 3 == 0:\n",
+        "    print(\"FizzBuzz\")\n",
         "\n",
         "elif var % 5 == 0:\n",
         "    print(\"Buzz\")\n",
+        "\n",
+        "elif var % 5 ==0:\n",
+        "    print(\"Fizz\")\n",
         "\n",
         "else:\n",
         "    print(var)\n"
