--- a/kadai_008/Untitled2.ipynb
+++ b/kadai_008/Untitled2.ipynb
@@ -16,20 +16,20 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 75,
+      "execution_count": 76,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "bb7_Ob4F985M",
-        "outputId": "776bf024-5115-40d2-dc2d-4a5af179e80f"
+        "outputId": "5d7f0ac5-3c84-41d9-dce6-caec70997e97"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "67\n"
+            "FizzBuzz\n"
           ]
         }
       ],
@@ -37,7 +37,7 @@
         "import random\n",
         "var = random.randint(0,100)\n",
         "\n",
-        "if var % 3 == 0 and var % 3 == 0:\n",
+        "if var % 5 == 0 and var % 3 == 0:\n",
         "    print(\"FizzBuzz\")\n",
         "\n",
         "elif var % 5 == 0:\n",
