--- a/kadai_014/Untitled5.ipynb
+++ b/kadai_014/Untitled5.ipynb
@@ -16,13 +16,13 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 37,
+      "execution_count": 43,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qDZIV8j-aqKe",
-        "outputId": "3795b617-3b99-43e9-a608-df4708ce6268"
+        "outputId": "f30b9a10-5234-410d-a54c-5e484b9c2408"
       },
       "outputs": [
         {
@@ -34,15 +34,14 @@
         }
       ],
       "source": [
-        "def total():\n",
-        "    price1 = 100\n",
-        "    price2 = 200\n",
-        "    tax = 1.1\n",
-        "    without_tax = price1 + price2\n",
-        "    total = without_tax * tax\n",
-        "    print(total)\n",
+        "price1 = 100\n",
+        "price2 = 200\n",
+        "tax = 1.1 #ローカルスコープからグローバルスコープへ移動\n",
         "\n",
-        "total()"
+        "def total():\n",
+        "    return price1 + price2\n",
+        "\n",
+        "print(total() * tax)"
       ]
     }
   ]
